fix: align position of close button on menu modal with menu icon

--- a/gurubu-client/src/app/styles/common/navbar.scss
+++ b/gurubu-client/src/app/styles/common/navbar.scss
@@ -71,7 +71,7 @@
     border: none;
     background-color: transparent;
     outline: none;
-    top: $space-xxlarge;
+    top: $space-large;
     right: $space-xxlarge;
   }
 
